Fixed documentation structure

--- a/docs/theme/partials/header.html
+++ b/docs/theme/partials/header.html
@@ -14,8 +14,7 @@
       {% else %}
         <div class="md-header-nav__ellipsis">
           <span class="md-header-nav__topic md-ellipsis">
-             <b><span style="color: black; ">Tensor</span>X</b> Documentation
-             <!--{{ config.site_name }}-->
+             <b><span style="color: black; padding:55px 0 0 0; width: 200px">Tensor</span>X</b>
           </span>
           <span class="md-header-nav__topic md-ellipsis">
             {% if page and page.meta and page.meta.title %}
