--- a/docs/theme/partials/header.html
+++ b/docs/theme/partials/header.html
@@ -1,8 +1,11 @@
 <header class="md-header" data-md-component="header">
   <nav class="md-header-nav md-grid" aria-label="{{ lang.t('header.title') }}">
-    <a href="{{ config.site_url | default(nav.homepage.url, true) | url }}" title="{{ config.site_name }}" class="md-header-nav__button md-logo" aria-label="{{ config.site_name }}">
+    <!--<a href="{{ config.site_url | default(nav.homepage.url, true) | url }}" title="{{ config.site_name }}" class="md-header-nav__button md-logo" aria-label="{{ config.site_name }}">
       {% include "partials/logo.html" %}
-    </a>
+    </a>-->
+    {% if config.theme.logo %}
+      <img src="{{ config.theme.logo | url }}" width="95" alt="logo">
+    {% endif %}
     <label class="md-header-nav__button md-icon" for="__drawer">
       {% include ".icons/material/menu" ~ ".svg" %}
     </label>
@@ -14,7 +17,7 @@
       {% else %}
         <div class="md-header-nav__ellipsis">
           <span class="md-header-nav__topic md-ellipsis">
-             <b><span style="color: black; padding:55px 0 0 0; width: 200px">Tensor</span>X</b>
+             Documentation
           </span>
           <span class="md-header-nav__topic md-ellipsis">
             {% if page and page.meta and page.meta.title %}
