--- a/docs/theme/partials/footer.html
+++ b/docs/theme/partials/footer.html
@@ -49,12 +49,13 @@
             {{ config.copyright }}
           </div>
         {% endif %}
-        <!--powered by
-        <a href="https://www.mkdocs.org" target="_blank" rel="noopener">MkDocs</a>
-        and
+        Made with
         <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
           Material for MkDocs</a>
-          -->
+        and
+        <a href="https://github.com/davidenunes/mkgendocs" target="_blank" rel="noopener">
+          mkgendocs</a>
+
       </div>
       {% include "partials/social.html" %}
     </div>
